fix scrollbars not adhering to my desire of making rstudio darker

--- a/custom_styles.css
+++ b/custom_styles.css
@@ -72,23 +72,6 @@ body.rstudio-themes-flat .rstudio-themes-dark-grey {
 	background-color: #282828 !important;
 }
 
-/* main toolbar */
-.rstudio-themes-dark > div:last-child > div > div > .rstheme_toolbarWrapper,
-.rstudio-themes-dark [role="application"] > div > .rstheme_toolbarWrapper {
-  background-color: #2c2c2c !important;
-  border-color: #2c2c2c !important;
-  border-radius: 1px solid;
-}
-
-.rstudio-themes-flat .rstudio-themes-dark-grey .GJQ3LUQCCS,
-.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCCS {
-	background: linear-gradient(to right, #282828, #1e1e1e 20%);
-}
-
-.rstudio-HyperlinkLabel {
-	color: #8be9fd;
-}
-
 .GD15MCFCGP .gwt-TabLayoutPanelContentContainer {
 	background: #3c3c3c40;
 	border: 1px solid #0a0a0a;
@@ -102,24 +85,12 @@ body.rstudio-themes-flat .rstudio-themes-dark-grey {
 	border-left-color: #0a0a0a;
 }
 
-/* Console Pane (without any other tabs) */
-.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO div.GD15MCFCMO .GD15MCFCIS {
-	background-color: #2c2c2c !important;
-	border-color: #0a0a0a !important;
-}
-.rstudio-themes-flat .GJQ3LUQCLV.GJQ3LUQCPO div.GJQ3LUQCMO .GJQ3LUQCIS {
-	  margin-right: 0;
-	  margin-bottom: 2px;
-	  border-bottom: solid 1px #0a0a0a;
-      background-color: #2c2c2c !important;
-
-}
-
-/* Console Pane top border (without any other tabs) */
-.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO div.GD15MCFCMO .GD15MCFCIS,
-.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO,
-.rstudio-themes-flat .rstudio-themes-dark-grey .GJQ3LUQCLV.GJQ3LUQCPO {
-	border-color: #0a0a0a !important;
+/* main toolbar */
+.rstudio-themes-dark > div:last-child > div > div > .rstheme_toolbarWrapper,
+.rstudio-themes-dark [role="application"] > div > .rstheme_toolbarWrapper {
+  background-color: #2c2c2c !important;
+  border-color: #2c2c2c !important;
+  border-radius: 1px solid;
 }
 
 /* toolbars */
@@ -141,7 +112,7 @@ body.rstudio-themes-flat .rstudio-themes-dark-grey {
 .rstudio-themes-dark .gwt-TabLayoutPanelTabs,
 /* windows */
 .rstudio-themes-dark .windowframe,
-/* remove gradients */
+/* gradients */
 .rstudio-themes-dark :-webkit-any(
 	.rstheme_multiPodUtilityTabArea,
 	.GD15MCFCCS,
@@ -150,6 +121,69 @@ body.rstudio-themes-flat .rstudio-themes-dark-grey {
 	background: linear-gradient(to right, #282828, #1e1e1e 20%) !important;
   	border-color: #0a0a0a !important;
 }
+/* 
+.rstudio-themes-flat .rstudio-themes-dark-grey .GJQ3LUQCCS,
+.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCCS {
+	background: linear-gradient(to right, #282828, #1e1e1e 20%);
+}
+*/
+
+/* scrollbars */
+::-webkit-scrollbar {
+  height: calc(17px * 10 / 16) !important;
+  width: 10px !important;
+}
+::-webkit-scrollbar-thumb {
+  border: none !important;
+  border-radius: 0 !important;
+  background-color: #1e1e1e !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3b3b3b !important;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #282828!important;
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-track {
+  background-color: transparent !important;
+}
+
+::-webkit-scrollbar-track:vertical {
+  box-shadow: inset 1px 0 0 0 var(--separator);
+}
+.rstudio-HyperlinkLabel {
+	color: #8be9fd;
+}
+
+
+
+
+/* Console Pane (without any other tabs) */
+.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO div.GD15MCFCMO .GD15MCFCIS {
+	background-color: #2c2c2c !important;
+	border-color: #0a0a0a !important;
+}
+.rstudio-themes-flat .GJQ3LUQCLV.GJQ3LUQCPO div.GJQ3LUQCMO .GJQ3LUQCIS {
+	  margin-right: 0;
+	  margin-bottom: 2px;
+	  border-bottom: solid 1px #0a0a0a;
+      background-color: #2c2c2c !important;
+
+}
+
+/* Console Pane top border (without any other tabs) */
+.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO div.GD15MCFCMO .GD15MCFCIS,
+.rstudio-themes-flat .rstudio-themes-dark-grey .GD15MCFCKV.GD15MCFCPO,
+.rstudio-themes-flat .rstudio-themes-dark-grey .GJQ3LUQCLV.GJQ3LUQCPO {
+	border-color: #0a0a0a !important;
+}
+
+
 
 /* tabs */
 .rstudio-themes-dark .gwt-TabLayoutPanelTab:not(.gwt-TabLayoutPanelTab-selected) .rstheme_tabLayoutCenter,
